--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "unpkg": "dist/index.umd.js",
+  "engines": {
+    "node": ">=18.12.0"
+  },
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "microbundle --tsconfig tsconfig.build.json --compress",
     "release": "dotenv semantic-release",
-    "test": "jest",
+    "test": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest --runInBand",
     "coverage": "jest --config='./jest.coverage.config.js'",
     "postcoverage": "dotenv codecov",
     "eslint": "eslint 'src/**/*.[tj]s' 'test/**/*.[tj]s'",
@@ -45,7 +48,7 @@
   },
   "homepage": "https://github.com/AndyOGo/stylelint-declaration-strict-value#readme",
   "peerDependencies": {
-    "stylelint": ">=7 <=15"
+    "stylelint": ">=16"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
@@ -68,6 +71,7 @@
     "babel-jest": "^29.4.2",
     "babel-register-ts": "^7.0.0",
     "codecov": "^3.8.1",
+    "cross-env": "^7.0.3",
     "doctoc": "^2.0.0",
     "dotenv-cli": "^4.0.0",
     "eslint": "^7.14.0",
@@ -78,14 +82,14 @@
     "eslint-plugin-tsdoc": "^0.2.7",
     "husky": "^6.0.0",
     "jest": "^29.4.2",
-    "jest-preset-stylelint": "^6.1.0",
+    "jest-preset-stylelint": "^7.0.0",
     "lint-staged": "^10.5.2",
     "microbundle": "^0.12.0",
     "nyc": "^15.1.0",
     "pinst": "^2.1.6",
     "prettier": "^2.2.1",
     "semantic-release": "^17.3.0",
-    "stylelint": "^15.1.0",
+    "stylelint": "^16.0.0",
     "typedoc": "^0.22.7",
     "typedoc-plugin-markdown": "^3.2.1",
     "typescript": "^4.1.2"
